# OpenGLGaussianSplattingRenderer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  README.md  generateHistograms.glsl  main.cpp  scan.glsl  sort.glsl  sort.h  testSingleItem.ply  utils.h
include/: Camera.h  Splats.h  sort.h  utils.h
shaders/: computePrefixSum.glsl  countBins.glsl  countTileSizes.glsl  draw.glsl  duplicateKeys.glsl  generateHistograms.glsl  pad.glsl  prefixBins.glsl  preprocess.glsl  renderTexture.frag  renderTexture.vert  scan.glsl  simplifiedVersion.glsl  simplifiedVersioncopy.glsl  sort.glsl
src/: Camera.cpp  Splats.cpp  sort.cpp  utils.cpp
tests/: CovarianceToAnglesAndScales.py  plyFileGenerator.py  plyParseTests.cpp  sortTests.cpp
